--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @import "base/animations";
 @import "components/buttons";
 @import "components/destination";
+@import "pages/pagePaiement"; 
 @import "pages/pageDestination"; 
 @import "pages/accueil"; 
 @import "pages/destinations"; 
