--- a/scss/base/animations.scss
+++ b/scss/base/animations.scss
@@ -1,3 +1,24 @@
+// PAGES
+
+// .fade-enter-active,
+.fade-leave-active {
+  transition-duration: 0.3s;
+  transition-property: opacity;
+  transition-timing-function: ease;
+}
+
+// .fade-enter,
+.fade-leave-active {
+  opacity: 0
+}
+
+
+
+
+
+
+
+
 .entreePhoto-enter-active,
 .entreePhoto-leave-active {
     animation: entreePhoto 4s;
