--- a/scss/base/animations.scss
+++ b/scss/base/animations.scss
@@ -1,13 +1,13 @@
 // PAGES
 
-// .fade-enter-active,
+.fade-enter-active,
 .fade-leave-active {
-  transition-duration: 0.3s;
+  transition-duration: 0.2s;
   transition-property: opacity;
   transition-timing-function: ease;
 }
 
-// .fade-enter,
+.fade-enter,
 .fade-leave-active {
   opacity: 0
 }
