--- a/scss/base/global.scss
+++ b/scss/base/global.scss
@@ -21,10 +21,26 @@ a {
 
 #logo13 {
 	// font-family: Montserrat;
+    font-family: Axis;
 	text-align: center;
 	padding: 50px 0 30px 0;
 	font-size: 3.2vw;
 	font-weight: 700;
 	// color: $color_turquoise;
     color: white;
+}
+
+#logo {
+    margin: 0 auto;
+    width: 11vw;
+    padding-top: 40px;
+    text-align: center;
+}
+#logo img {
+    margin: 0 auto;
+    width: 100%;
+    transition: filter 0.2s;
+    &:hover {
+        filter: grayscale(100%);
+    }
 }
