--- a/scss/components/destination.scss
+++ b/scss/components/destination.scss
@@ -7,7 +7,10 @@
 //   transform: translateY(-30px);
 // }
 // -----------------------------------
-
+#bodyDestinations #logo {
+    width: 180px;
+    padding: 100px 0 80px 0;
+}
 
 .destination {
     position: relative;
@@ -95,7 +98,7 @@
 .destination .bouton {
     width: 100%;
     /* height: 50px;*/
-    padding: 8px 10px;
+    padding: 6px 10px !important;
     // margin: 3px 0 5px 0;
     font-size: 13px;
     box-sizing: border-box;
