--- a/css/main.css
+++ b/css/main.css
@@ -727,7 +727,14 @@ a {
 #main_lesDestinations {
   width: 85vw;
   margin: 0 auto;
-  padding-bottom: 30px;
+  padding-bottom: 30px; }
+
+#contenant_liste {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between; }
+
+#titre_liste {
+  font-size: 20px;
+  font-weight: 600;
+  padding: 0 0 25px 0; }
