--- a/scss/pages/destinations.scss
+++ b/scss/pages/destinations.scss
@@ -26,7 +26,16 @@
     width: 85vw;
     margin: 0 auto;
     padding-bottom: 30px;
+
+}
+#contenant_liste {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-between;   
+}
+
+#titre_liste {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 0 0 25px 0;
 }
