--- a/scss/pages/destinations.scss
+++ b/scss/pages/destinations.scss
@@ -32,10 +32,52 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;   
+    margin-top: 20px;
 }
 
 #titre_liste {
     font-size: 20px;
     font-weight: 600;
-    padding: 0 0 25px 0;
 }
+
+#header_liste {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 0 20px 0;
+    border-bottom: 1px solid #dedede;
+}
+#header_tri h2 {
+    font-weight: 600;
+    padding-right: 10px;
+    font-size: 14px;
+}
+#header_tri {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    i {
+        font-size: 16px;
+        padding-right: 4px;
+    }
+    p {
+        cursor: pointer;
+        color: #444;
+        padding: 3px 10px;
+        transition: color 0.2s;
+        vertical-align: middle;
+        display: flex;
+        align-items: center;
+        &:hover {
+            color: $color_bleu2;
+        }
+    }
+    span {
+        vertical-align: middle;
+        font-size: 15px;
+    }
+}
+
+
+
