--- a/css/main.css
+++ b/css/main.css
@@ -7,51 +7,51 @@
   font-style: normal; }
 
 .boxShadow {
-  box-shadow: 0 0 3px #555;
-  border-radius: 3px; }
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  border-radius: 2px; }
 
 .boxShadowHover {
-  box-shadow: 0 0 3px #555;
-  transition: box-shadow 0.2s; }
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  border-radius: 2px; }
 
 @media screen and (min-width: 1080px) {
   .boxShadowHover:hover {
-    box-shadow: 0 0 15px #aaa; } }
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); } }
 
 #icon_pays {
-  background-image: url("../images/icons/icon_pays.png");
+  background-image: url("../images/icons/accueil/icon_pays.png");
   background-size: contain; }
 
 #icon_prix {
-  background-image: url("../images/icons/icon_prix.png");
+  background-image: url("../images/icons/accueil/icon_prix.png");
   background-size: contain; }
 
 #icon_note {
-  background-image: url("../images/icons/icon_note.png");
+  background-image: url("../images/icons/accueil/icon_note.png");
   background-size: contain; }
 
 #icon_activites {
-  background-image: url("../images/icons/icon_activites.png");
+  background-image: url("../images/icons/accueil/icon_activites.png");
   background-size: contain; }
 
 #icon_services {
-  background-image: url("../images/icons/icon_services.png");
+  background-image: url("../images/icons/accueil/icon_services.png");
   background-size: contain; }
 
 #icon_climat {
-  background-image: url("../images/icons/icon_climat.png");
+  background-image: url("../images/icons/accueil/icon_climat.png");
   background-size: contain; }
 
 #icon_date {
-  background-image: url("../images/icons/icon_date.png");
+  background-image: url("../images/icons/accueil/icon_date.png");
   background-size: contain; }
 
 #icon_options {
-  background-image: url("../images/icons/icon_options.png");
+  background-image: url("../images/icons/accueil/icon_options.png");
   background-size: contain; }
 
 #icon_paiement {
-  background-image: url("../images/icons/icon_paiement.png");
+  background-image: url("../images/icons/accueil/icon_paiement.png");
   background-size: contain; }
 
 html {
@@ -101,145 +101,129 @@ a {
 .fade-leave-active {
   opacity: 0; }
 
-.entreePhoto-enter-active,
-.entreePhoto-leave-active {
-  animation: entreePhoto 4s;
-  animation-timing-function: ease-out; }
-
-@keyframes entreePhoto {
-  0% {
-    width: 100vw;
+@media screen and (min-width: 1080px) {
+  .entreePhoto-enter-active,
+  .entreePhoto-leave-active {
+    animation: entreePhoto 4s;
+    animation-timing-function: ease-out; }
+  @keyframes entreePhoto {
+    0% {
+      width: 100vw;
+      opacity: 0; }
+    20% {
+      opacity: 1; }
+    91% {
+      opacity: 1;
+      width: 100vw; }
+    100% {
+      width: 50vw; } }
+  .entreeTitre-enter-active,
+  .entreeTitre-leave-active {
+    animation: entreeTitre 4.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards; }
+  @keyframes entreeTitre {
+    0% {
+      opacity: 0;
+      font-size: 90px;
+      width: 100%;
+      text-align: center; }
+    20% {
+      opacity: 0; }
+    40% {
+      opacity: 1; }
+    70% {
+      opacity: 1; }
+    80% {
+      font-size: 90px;
+      opacity: 0;
+      text-align: center;
+      width: 100%; }
+    81% {
+      font-size: 50px;
+      opacity: 0;
+      text-align: left;
+      width: 50%; }
+    95% {
+      opacity: 0; }
+    to {
+      width: 50%;
+      font-size: 50px;
+      opacity: 1; } }
+  .entreeSousTitre-enter-active,
+  .entreeSousTitre-leave-active {
+    animation: entreeSousTitre 4s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    opacity: 0.01; }
+  @keyframes entreeSousTitre {
+    0% {
+      opacity: 0; }
+    20% {
+      opacity: 0; }
+    50% {
+      opacity: 0; }
+    55% {
+      opacity: 1; }
+    91% { }
+    100% {
+      opacity: 1; } }
+  .entreeResume-enter-active,
+  .entreeResume-leave-active {
+    animation: entreeResume 4s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    opacity: 0.01; }
+  @keyframes entreeResume {
+    0% {
+      opacity: 0; }
+    20% {
+      opacity: 0; }
+    50% {
+      opacity: 0; }
+    70% {
+      opacity: 0; }
+    91% {
+      opacity: 0; }
+    100% {
+      opacity: 1; } }
+  .entreeInfos-enter-active,
+  .entreeInfos-leave-active {
+    animation: entreeInfos 4s;
+    animation-timing-function: ease-out; }
+  @keyframes entreeInfos {
+    0% {
+      width: 0;
+      padding: 0;
+      opacity: 0; }
+    91% {
+      width: 0;
+      padding: 0;
+      opacity: 0; }
+    100% {
+      opacity: 1;
+      width: 50vw; } }
+  .entreeSubInfo-enter-active,
+  .entreeSubInfo-leave-active {
+    animation: entreeSubInfo 0.5s;
+    transform: translateY(-30px);
     opacity: 0; }
-  20% {
-    opacity: 1; }
-  91% {
-    opacity: 1;
-    width: 100vw; }
-  100% {
-    width: 50vw; } }
-
-.entreeTitre-enter-active,
-.entreeTitre-leave-active {
-  animation: entreeTitre 4.5s;
-  animation-timing-function: ease-out;
-  animation-fill-mode: forwards; }
-
-@keyframes entreeTitre {
-  0% {
-    opacity: 0;
-    font-size: 90px;
-    width: 100%;
-    text-align: center; }
-  20% {
-    opacity: 0; }
-  40% {
-    opacity: 1; }
-  70% {
-    opacity: 1; }
-  80% {
-    font-size: 90px;
-    opacity: 0;
-    text-align: center;
-    width: 100%; }
-  81% {
-    font-size: 50px;
-    opacity: 0;
-    text-align: left;
-    width: 50%; }
-  95% {
-    opacity: 0; }
-  to {
-    width: 50%;
-    font-size: 50px;
-    opacity: 1; } }
-
-.entreeSousTitre-enter-active,
-.entreeSousTitre-leave-active {
-  animation: entreeSousTitre 4s;
-  animation-timing-function: ease-out;
-  animation-fill-mode: forwards;
-  opacity: 0.01; }
-
-@keyframes entreeSousTitre {
-  0% {
-    opacity: 0; }
-  20% {
-    opacity: 0; }
-  50% {
-    opacity: 0; }
-  55% {
-    opacity: 1; }
-  91% { }
-  100% {
-    opacity: 1; } }
-
-.entreeResume-enter-active,
-.entreeResume-leave-active {
-  animation: entreeResume 4s;
-  animation-timing-function: ease-out;
-  animation-fill-mode: forwards;
-  opacity: 0.01; }
-
-@keyframes entreeResume {
-  0% {
-    opacity: 0; }
-  20% {
-    opacity: 0; }
-  50% {
-    opacity: 0; }
-  70% {
-    opacity: 0; }
-  91% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
-
-.entreeInfos-enter-active,
-.entreeInfos-leave-active {
-  animation: entreeInfos 4s;
-  animation-timing-function: ease-out; }
-
-@keyframes entreeInfos {
-  0% {
-    width: 0;
-    padding: 0;
-    opacity: 0; }
-  91% {
-    width: 0;
-    padding: 0;
-    opacity: 0; }
-  100% {
-    opacity: 1;
-    width: 50vw; } }
-
-.entreeSubInfo-enter-active,
-.entreeSubInfo-leave-active {
-  animation: entreeSubInfo 0.5s;
-  transform: translateY(-30px);
-  opacity: 0; }
-
-@keyframes entreeSubInfo {
-  100% {
-    transform: translateY(0px);
-    opacity: 1; } }
-
-#uneDestinationInfos > *:nth-child(1) {
-  animation-delay: 4s; }
-
-#uneDestinationInfos > *:nth-child(2) {
-  animation-delay: 4.1s; }
-
-#uneDestinationInfos > *:nth-child(3) {
-  animation-delay: 4.2s; }
-
-#uneDestinationInfos > *:nth-child(4) {
-  animation-delay: 4.3s; }
-
-#uneDestinationInfos > *:nth-child(5) {
-  animation-delay: 4.4s; }
-
-#uneDestinationInfos > *:nth-child(6) {
-  animation-delay: 4.5s; }
+  @keyframes entreeSubInfo {
+    100% {
+      transform: translateY(0px);
+      opacity: 1; } }
+  #uneDestinationInfos > *:nth-child(1) {
+    animation-delay: 4s; }
+  #uneDestinationInfos > *:nth-child(2) {
+    animation-delay: 4.1s; }
+  #uneDestinationInfos > *:nth-child(3) {
+    animation-delay: 4.2s; }
+  #uneDestinationInfos > *:nth-child(4) {
+    animation-delay: 4.3s; }
+  #uneDestinationInfos > *:nth-child(5) {
+    animation-delay: 4.4s; }
+  #uneDestinationInfos > *:nth-child(6) {
+    animation-delay: 4.5s; } }
 
 .bouton {
   border-radius: 100px;
@@ -304,8 +288,8 @@ a {
   flex-direction: column;
   justify-content: space-between;
   top: 0px;
-  transition: transform 0.25s, opacity 0.25s, box-shadow 0.25s, top 0.15s;
-  transition-timing-function: ease-in-out; }
+  transition: transform 0.25s, opacity 0.25s, box-shadow 0.25s, top 0.25s;
+  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1); }
 
 .destiInfo {
   display: flex;
@@ -410,9 +394,7 @@ a {
 
 @media screen and (min-width: 1080px) {
   .destination {
-    width: 27vw; }
-    .destination:hover {
-      top: -7px; } }
+    width: 27vw; } }
 
 #main_paiement {
   width: 100vw;
@@ -426,14 +408,14 @@ a {
 
 #uneDestination {
   width: 100vw;
-  height: 100vh;
-  display: flex; }
+  display: flex;
+  flex-direction: column; }
 
 #uneDestinationImage {
   background-size: cover;
   background-position: center center;
   height: 100vh;
-  width: 50vw;
+  width: 100vw;
   padding: 50px 70px;
   box-sizing: border-box;
   background-color: #444;
@@ -515,8 +497,7 @@ a {
 
 #uneDestinationInfos {
   background-color: #fefefe;
-  height: 100vh;
-  width: 50vw;
+  width: 100vw;
   padding: 50px 70px;
   box-sizing: border-box; }
 
@@ -527,7 +508,7 @@ a {
 
 #uneDestinationInfos > div:nth-child(2) {
   padding-top: 20px;
-  padding-bottom: 40px;
+  padding-bottom: 15px;
   font-size: 15px;
   font-weight: 600;
   color: #32D096; }
@@ -541,19 +522,30 @@ a {
   display: flex;
   align-items: center;
   font-size: 16px;
-  color: #444; }
+  color: #444;
+  margin-bottom: 30px; }
 
-#activites, #description {
+#activites,
+#description {
   margin-top: 20px;
   background-color: white;
-  padding: 30px;
+  padding: 28px;
   box-sizing: border-box;
-  font-size: 15px; }
+  font-size: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
 
-#activites h3, #description h3 {
+#activites {
+  padding-bottom: 25px; }
+
+#activites h3,
+#description h3 {
   font-weight: 600;
-  padding-bottom: 15px;
-  color: #34A2FF; }
+  padding-bottom: 20px;
+  color: #34A2FF;
+  min-width: 100%;
+  font-size: 15px; }
 
 #uneDestinationInfos .bouton {
   width: 140px;
@@ -573,6 +565,41 @@ a {
   vertical-align: middle;
   margin-right: 20px;
   font-weight: 600; }
+
+#activites > div > div {
+  width: 25px;
+  height: 25px;
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  margin-right: 10px; }
+
+#activites > div {
+  display: flex;
+  margin-right: 5px;
+  align-items: center; }
+
+@media screen and (min-width: 1080px) {
+  #uneDestination {
+    flex-direction: row; }
+  #uneDestinationImage {
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    width: 50vw;
+    padding: 50px 70px;
+    box-sizing: border-box;
+    background-color: #444;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+  #uneDestinationInfos {
+    background-color: #fefefe;
+    height: 100vh;
+    width: 50vw;
+    padding: 50px 70px;
+    box-sizing: border-box; } }
 
 #accueil {
   position: absolute;
