--- a/scss/base/effects.scss
+++ b/scss/base/effects.scss
@@ -1,15 +1,18 @@
 .boxShadow {
-    box-shadow: 0 0 3px #555;
-    border-radius: 3px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    border-radius: 2px;
 }
 
 .boxShadowHover {
-    box-shadow: 0 0 3px #555;
-    transition: box-shadow 0.2s;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    // transition: box-shadow 0.3s cubic-bezier(.25, .8, .25, 1);
+    border-radius: 2px;
 }
+
+
 
 @media screen and (min-width: $breakpoint_bureau) {
     .boxShadowHover:hover {
-        box-shadow: 0 0 15px #aaa;
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     }
 }
