--- a/scss/pages/pageDestination.scss
+++ b/scss/pages/pageDestination.scss
@@ -17,7 +17,7 @@
     background-position: center center;
     height: 100vh;
     width: 100vw;
-    padding: 50px 70px;
+    padding: 5vw 6vw;
     box-sizing: border-box;
     background-color: #444;
     color: white;
@@ -74,25 +74,21 @@
     align-items: center;
     box-sizing: border-box;
     border-radius: 2px;
-    font-size: 14px;
+    font-size: 11px;
 }
 
-#resumeInfos>div {
-    width: 30%;
-    text-align: center;
-}
 
 #resumeInfos>div:first-child>div:first-child {
     padding-bottom: 4px;
     color: $color_turquoise;
-    font-size: 16px;
+    font-size: 14px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #resumeInfos>div:first-child>div:first-child i {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 
@@ -104,7 +100,7 @@
 
 #resumeInfos>div:nth-child(2)>div:first-child i {
     color: orange;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 
@@ -112,7 +108,7 @@
     padding-bottom: 4px;
     color: $color_turquoise;
     font-weight: 800;
-    font-size: 16px;
+    font-size: 14px;
     display: flex;
     justify-content: center;
 }
@@ -128,7 +124,7 @@
     background-color: #fefefe;
     // height: 100vh;
     width: 100vw;
-    padding: 50px 70px;
+    padding: 5vw 6vw;
     box-sizing: border-box;
 }
 
@@ -175,6 +171,7 @@
 
 #activites {
     padding-bottom: 25px;
+    flex-direction: column;
 }
 
 #activites h3,
@@ -192,19 +189,20 @@
 }
 
 #suivant {
-    margin-top: 40px;
+    margin-top: 30px;
     color: $color_turquoise;
     font-weight: 500;
     font-size: 15px;
     display: flex;
     text-align: right;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 #suivant p {
-    vertical-align: middle;
-    margin-right: 20px;
+    margin-bottom: 10px;
+    margin-right: 3px;
     font-weight: 600;
 }
 
@@ -221,15 +219,104 @@
 
 #activites>div {
     display: flex;
-    margin-right: 5px;
+    margin-top: 10px;
     align-items: center;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 10px;
+}
+
+#activites>div:last-child {
+    border-bottom: none;
 }
 
 
 
 
+@media screen and (min-width: $breakpoint_mobile) {
+    #uneDestinationInfos {
+        background-color: #fefefe;
+        // height: 100vh;
+        width: 100vw;
+        padding: 50px 70px;
+        box-sizing: border-box;
+    }
 
-@media screen and (min-width: $breakpoint_mobile) {}
+    #activites {
+        flex-direction: row;
+    }
+
+    #activites>div {
+        border-bottom: none;
+        padding-bottom: 0px;
+    }
+#suivant {
+    margin-top: 40px;
+    color: $color_turquoise;
+    font-weight: 500;
+    font-size: 15px;
+    display: flex;
+    flex-direction: row;
+    text-align: right;
+    justify-content: flex-end;
+    align-items: center;
+}
+#suivant p {
+    vertical-align: middle;
+    margin-right: 20px;
+    font-weight: 600;
+}
+#resumeInfos {
+    width: 100%;
+    padding: 25px 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+    border-radius: 2px;
+    font-size: 14px;
+}
+
+#resumeInfos>div {
+    width: 30%;
+    text-align: center;
+}
+
+#resumeInfos>div:first-child>div:first-child {
+    padding-bottom: 4px;
+    color: $color_turquoise;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#resumeInfos>div:first-child>div:first-child i {
+    font-size: 16px;
+}
+
+
+#resumeInfos>div:nth-child(2)>div:first-child {
+    padding-bottom: 4px;
+    display: flex;
+    justify-content: center;
+}
+
+#resumeInfos>div:nth-child(2)>div:first-child i {
+    color: orange;
+    font-size: 18px;
+}
+
+
+#resumeInfos>div:nth-child(3)>div:first-child {
+    padding-bottom: 4px;
+    color: $color_turquoise;
+    font-weight: 800;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+}
+}
 
 @media screen and (min-width: $breakpoint_bureau) {
     #uneDestination {
@@ -251,11 +338,11 @@
     }
 
 
-#uneDestinationInfos {
-    background-color: #fefefe;
-    height: 100vh;
-    width: 50vw;
-    padding: 50px 70px;
-    box-sizing: border-box;
-}
+    #uneDestinationInfos {
+        background-color: #fefefe;
+        height: 100vh;
+        width: 50vw;
+        padding: 50px 70px;
+        box-sizing: border-box;
+    }
 }
