--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ a {
   font-family: Axis;
   text-align: center;
   padding: 50px 0 30px 0;
-  font-size: 3.2vw;
+  font-size: 30vw;
   font-weight: 700;
   color: white; }
 
@@ -888,6 +888,77 @@ a {
     padding: 50px 70px;
     box-sizing: border-box; } }
 
+#bodyPaiement {
+  max-width: 100vw;
+  position: relative;
+  vertical-align: middle;
+  background-color: white; }
+
+#lieu_background {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: -4vw;
+  font-size: 14vw;
+  font-weight: 800;
+  color: #eee;
+  text-transform: uppercase;
+  width: 300vw; }
+
+#bodyPaiementRetour {
+  position: absolute;
+  z-index: 1;
+  top: 60px;
+  left: 25px;
+  color: #32D096;
+  text-shadow: none;
+  font-weight: 600;
+  font-size: 14px; }
+
+#bodyPaiement #logo {
+  position: relative;
+  z-index: 1; }
+
 #main_paiement {
-  width: 100vw;
-  height: 100vw; }
+  width: 85%;
+  padding: 100px 0 40px 0;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 50px;
+  grid-template-areas: "infos hebergement" "services  finalisation"; }
+
+#main_paiement section {
+  width: 100%;
+  min-height: 20vw; }
+
+#main_paiement section:nth-child(1) {
+  grid-area: infos; }
+
+#main_paiement section:nth-child(2) {
+  grid-area: hebergement; }
+
+#main_paiement section:nth-child(3) {
+  grid-area: services; }
+
+#main_paiement section:nth-child(4) {
+  grid-area: finalisation; }
+
+#main_paiement h1 {
+  border-bottom: 1px solid #eee;
+  font-size: 19px;
+  font-weight: 800;
+  padding-bottom: 10px;
+  color: #333; }
+
+#main_paiement input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid #ccc; }
+
+#main_paiement label {
+  font-size: 14px;
+  font-weight: 600;
+  background-color: #eee; }
