--- a/scss/pages/pagePaiement.scss
+++ b/scss/pages/pagePaiement.scss
@@ -1,5 +1,103 @@
-#main_paiement {
-    width: 100vw;
-    height: 100vw;
+#bodyPaiement {
+    max-width: 100vw;
+    // height: 100vh;
+    position: relative;
+    vertical-align: middle;
+    background-color: white;
 }
 
+
+#lieu_background {
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: -4vw;
+    font-size: 14vw;
+    font-weight: 800;
+    color: #eee;
+    text-transform: uppercase;
+    width: 300vw;
+}
+
+#bodyPaiementRetour {
+    position: absolute;
+    z-index: 1;
+    top: 60px;
+    left: 25px;
+    color: $color_turquoise;
+    text-shadow: none;
+    font-weight: 600;
+    font-size: 14px;
+}
+
+#bodyPaiement #logo {
+	position: relative;
+	z-index: 1;
+}
+
+
+// =========
+#main_paiement {
+    width: 85%;
+    padding: 100px 0 40px 0;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 50px;
+
+    grid-template-areas: "infos hebergement"
+        "services  finalisation";
+}
+
+
+
+#main_paiement {
+    section {
+        // background-color: yellow;
+        width: 100%;
+        min-height: 20vw;
+        // padding: 15px;
+        // box-sizing: border-box;
+    }
+
+    section:nth-child(1) {
+        grid-area: infos;
+    }
+
+    section:nth-child(2) {
+        grid-area: hebergement;
+    }
+
+    section:nth-child(3) {
+        grid-area: services;
+    }
+
+    section:nth-child(4) {
+        grid-area: finalisation;
+    }
+
+
+    h1 {
+        border-bottom: 1px solid #eee;
+        font-size: 19px;
+        font-weight: 800;
+        padding-bottom: 10px;
+        color: #333;
+    }
+
+
+    input[type=text] {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        border: none;
+        border-bottom: 2px solid #ccc;
+    }
+
+    label {
+    	font-size: 14px;
+    	font-weight: 600;
+    	background-color: #eee;
+    }
+
+}
