--- a/scss/pages/pagePaiement.scss
+++ b/scss/pages/pagePaiement.scss
@@ -23,7 +23,7 @@
     position: absolute;
     z-index: 1;
     top: 60px;
-    left: 25px;
+    left: 7.5%;
     color: $color_turquoise;
     text-shadow: none;
     font-weight: 600;
@@ -31,15 +31,15 @@
 }
 
 #bodyPaiement #logo {
-	position: relative;
-	z-index: 1;
+    position: relative;
+    z-index: 1;
 }
 
 
 // =========
 #main_paiement {
     width: 85%;
-    padding: 100px 0 40px 0;
+    padding: 120px 0 40px 0;
     margin: 0 auto;
     display: grid;
     grid-gap: 50px;
@@ -78,26 +78,272 @@
 
     h1 {
         border-bottom: 1px solid #eee;
-        font-size: 19px;
+        font-size: 21px;
         font-weight: 800;
         padding-bottom: 10px;
+        margin-bottom: 10px;
         color: #333;
     }
 
 
     input[type=text] {
+        outline: none;
         width: 100%;
-        padding: 12px 20px;
-        margin: 8px 0;
+        padding: 6px 15px 10px 15px;
         box-sizing: border-box;
         border: none;
-        border-bottom: 2px solid #ccc;
+        border-bottom: 2px solid #D9D9D9;
+        background-color: #FAFAFA;
+        transition: border-bottom 0.2s;
+
+        &:focus {
+            border-bottom: 2px solid $color_bleu2;
+        }
+
+        &::placeholder {
+            font-style: italic;
+            color: #C4C4C4;
+            font-size: 12px;
+            font-family: Montserrat;
+        }
     }
 
     label {
-    	font-size: 14px;
-    	font-weight: 600;
-    	background-color: #eee;
+        font-size: 10px;
+        font-weight: 600;
+        color: $color_bleu2;
+        padding-left: 15px;
     }
 
+    form p {
+        background-color: #FAFAFA;
+        padding-top: 10px;
+        margin-bottom: 15px;
+    }
+
+}
+
+// ===============================================================
+// ===============================================================
+// ===============================================================
+// ===============================================================
+
+
+
+#section_hebergement>div {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+}
+
+#section_hebergement>div>div {
+    cursor: pointer;
+}
+
+.hebergement_img {
+    // background-color: red;
+    height: 230px;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
+    transition: box-shadow 0.2s;
+
+}
+
+#suite .hebergement_img {
+    background-image: url("../images/hebergements/suite.jpg");
+    box-shadow: inset 0 -5px 0 $color_turquoise;
+
+
+}
+
+#lodge .hebergement_img {
+    background-image: url("../images/hebergements/lodge.jpg");
+    box-shadow: inset 0 0px 0 $color_turquoise;
+
+
+}
+
+#villa .hebergement_img {
+    background-image: url("../images/hebergements/villa.jpg");
+    box-shadow: inset 0 0px 0 $color_turquoise;
+
+
+}
+
+#suite:hover>.hebergement_img,
+#lodge:hover>.hebergement_img,
+#villa:hover>.hebergement_img {
+    box-shadow: inset 0 -5px 0 $color_turquoise !important;
+}
+
+#section_hebergement {
+    h3 {
+        padding-top: 12px;
+        padding-bottom: 3px;
+        font-weight: 700;
+        font-size: 17px;
+    }
+
+    p {
+        padding-bottom: 15px;
+        font-weight: 600;
+        font-size: 13px;
+        color: $color_bleu2;
+    }
+}
+
+// ===============================================================
+// ===============================================================
+// ===============================================================
+// ===============================================================
+
+
+#section_options {
+    display: grid;
+
+    p {
+        padding: 0;
+    }
+
+}
+
+#section_options>div {
+    height: 60px;
+    margin: 4px 0;
+    display: flex;
+    align-items: center;
+}
+
+.options_icon {
+    width: 4vw;
+    height: 4vw;
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#options_icon_01 {
+    background-image: url('../images/icons/options/option_01.png')
+}
+
+#options_icon_02 {
+    background-image: url('../images/icons/options/option_02.png')
+}
+
+#options_icon_03 {
+    background-image: url('../images/icons/options/option_03.png')
+}
+
+#options_icon_04 {
+    background-image: url('../images/icons/options/option_04.png')
+}
+
+
+
+
+.options_texte {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-left: 20px;
+    width: 60%;
+    // height: 100%;
+}
+
+.options_texte h3 {
+    padding-bottom: 4px;
+    padding-top: 0px;
+    font-size: 15px;
+    color: #444;
+    font-weight: 600;
+}
+
+.options_texte p {
+    font-size: 13px;
+    color: $color_bleu2;
+    font-weight: 600;
+    background-color: white;
+}
+
+
+.leToggle {
+    // background-color: orange;
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+// ===============================================================
+// ===============================================================
+// ===============================================================
+// ===============================================================
+#section_finalisation {
+    input[type=text] {
+        &:focus {
+            border-bottom: 2px solid $color_turquoise;
+        }
+    }
+
+    label {
+        color: $color_turquoise;
+    }
+
+    #total {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        font-weight: 600;
+        width: 100%;
+
+        p {
+            color: #999;
+            font-size: 11px;
+        }
+
+        h4 {
+            border-radius: 2px;
+            border: 1px solid $color_turquoise;
+            color: $color_turquoise;
+            background-color: #EEFFF9;
+            padding: 13px 20px;
+            width: 70%;
+            font-size: 18px;
+            text-align: center;
+        }
+
+        >div:first-child {
+            display: flex;
+
+            p:first-child {
+                margin-right: 10px;
+                color: $color_turquoise;
+                font-size: 13px;
+                margin-bottom: 5px;
+            }
+        }
+    }
+
+    >div:last-child {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+
+    }
+
+    .bouton {
+        margin: 0;
+        padding: 14px 18px !important;
+        font-size: 15px;
+        font-weight: 600;
+    }
+
+    .bouton i {
+        font-size: 15px;
+        display: inline-block;
+        padding-left: 15px;
+    }
 }
