--- a/scss/pages/pageDestination.scss
+++ b/scss/pages/pageDestination.scss
@@ -59,7 +59,7 @@
     font-weight: 800;
     text-shadow: 0 0 120px #444;
     text-transform: uppercase;
-    line-height: 60px;
+    // line-height: 60px;
 
     width: 50%;
     opacity: 1;
