--- a/css/main.css
+++ b/css/main.css
@@ -982,7 +982,7 @@ a {
   margin: 0 auto;
   display: grid;
   grid-gap: 50px;
-  grid-template-areas: "infos hebergement" "services  finalisation"; }
+  grid-template-areas: "infos" "hebergement" "services" "finalisation"; }
 
 #main_paiement section {
   width: 100%;
@@ -1185,3 +1185,12 @@ a {
   font-size: 15px;
   display: inline-block;
   padding-left: 15px; }
+
+@media screen and (min-width: 1080px) {
+  #main_paiement {
+    width: 85%;
+    padding: 120px 0 40px 0;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 50px;
+    grid-template-areas: "infos hebergement" "services  finalisation"; } }
