--- a/scss/pages/pagePaiement.scss
+++ b/scss/pages/pagePaiement.scss
@@ -44,8 +44,10 @@
     display: grid;
     grid-gap: 50px;
 
-    grid-template-areas: "infos hebergement"
-        "services  finalisation";
+    grid-template-areas: "infos"
+        "hebergement"
+        "services"
+        "finalisation";
 }
 
 
@@ -346,4 +348,32 @@
         display: inline-block;
         padding-left: 15px;
     }
+}
+
+
+
+// ===============================================================
+// ===============================================================
+// ===============================================================
+// ===============================================================
+
+
+
+
+
+@media screen and (min-width: $breakpoint_bureau) {
+
+
+    #main_paiement {
+        width: 85%;
+        padding: 120px 0 40px 0;
+        margin: 0 auto;
+        display: grid;
+        grid-gap: 50px;
+
+        grid-template-areas: "infos hebergement"
+            "services  finalisation";
+    }
+
+
 }
