--- a/css/main.css
+++ b/css/main.css
@@ -514,14 +514,14 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: space-around;
-  padding: 5vh 9vw;
+  padding: 5vh 9vw 0vh 9vw;
   font-weight: 700;
   margin-top: 0; }
 
 #infos > div {
   width: 100%;
-  font-size: 18px;
-  line-height: 19px;
+  font-size: 15px;
+  line-height: 18px;
   text-align: center;
   color: white; }
 
@@ -561,7 +561,7 @@ a {
 #bodyAccueil {
   position: relative;
   min-height: 100vh;
-  padding-bottom: 50px; }
+  padding-bottom: 70px; }
   #bodyAccueil::before {
     content: "";
     position: absolute;
@@ -587,18 +587,28 @@ a {
     border-radius: 3px; }
   #btnListe {
     width: 290px;
-    font-size: 15px; } }
+    font-size: 15px; }
+  #infos > div {
+    width: 100%;
+    font-size: 17px;
+    line-height: 19px;
+    text-align: center;
+    color: white; } }
 
 @media only screen and (min-width: 800px) {
   #infos {
     flex-direction: row; }
   #infos > div {
-    width: 25%; }
+    width: 28%; }
+  #infos > div > div:nth-child(2) {
+    height: 70px; }
   #infos > div > div:nth-child(3) > div {
     width: 6vw;
     height: 6vw;
     background-color: white;
     border-radius: 3px; }
+  #infos > div > div:nth-child(3) {
+    margin: 25px 0 8vh 0; }
   #infos > div h1 {
     font-family: Ubuntu;
     color: white;
@@ -606,7 +616,7 @@ a {
     padding-bottom: 30px;
     position: relative;
     left: -50%;
-    top: 35%;
+    top: 8%;
     z-index: 1; } }
 
 #bodyDestinations {
