Réparation bug affichage - page Paiement

--- a/css/main.css
+++ b/css/main.css
@@ -980,7 +980,7 @@ a {
 
 #bodyPaiement {
   max-width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
   vertical-align: middle;
   background-color: white; }
