--- a/scss/pages/pagePaiement.scss
+++ b/scss/pages/pagePaiement.scss
@@ -1,6 +1,6 @@
 #bodyPaiement {
     max-width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     position: relative;
     vertical-align: middle;
     background-color: white;
