--- a/scss/pages/pagePaiement.scss
+++ b/scss/pages/pagePaiement.scss
@@ -13,11 +13,14 @@
     z-index: 0;
     top: 0;
     left: -4vw;
-    font-size: 14vw;
+    font-size: 15vw;
     font-weight: 800;
     color: #eee;
     text-transform: uppercase;
     width: 300vw;
+    transition: opacity 0.5s, transform 0.5s;
+    opacity: 0;
+    transform: translateY(-5vw);
 }
 
 #bodyPaiementRetour {
@@ -29,13 +32,20 @@
     text-shadow: none;
     font-weight: 600;
     font-size: 14px;
+    transition: opacity 0.5s, transform 0.5s;
+    opacity: 0;
+    transform: translateX(30px);
 }
 
 #bodyPaiement #logo {
     position: relative;
     z-index: 1;
     width: 150px;
+    transition: opacity 0.5s, transform 0.5s;
+    opacity: 0;
+    transform: translateY(30px);
 }
+
 
 
 // =========
@@ -43,7 +53,7 @@
     position: relative;
     z-index: 10;
     width: 85%;
-    padding: 15vw 0 40px 0;
+    padding: 12vw 0 40px 0;
     margin: 0 auto;
     display: grid;
     grid-gap: 50px;
@@ -65,6 +75,9 @@
         // min-height: 20vw;
         // padding: 15px;
         // box-sizing: border-box;
+        transition: opacity 0.5s, transform 0.5s;
+        opacity: 0;
+        transform: translateY(-60px);
     }
 
     section:nth-child(1) {
