Nettoyage, nomenclature et organisation.

--- a/scss/layout/pagePaiement.scss
+++ b/scss/layout/pagePaiement.scss
@@ -7,7 +7,6 @@
 
 }
 
-
 #lieu_background {
     position: absolute;
     z-index: 0;
@@ -47,8 +46,9 @@
 }
 
 
-
-// =========
+// ================================
+// CONTENU DE LA PAGE
+// ================================
 #main_paiement {
     position: relative;
     z-index: 10;
@@ -70,11 +70,7 @@
 
 
     section {
-        // background-color: yellow;
         width: 100%;
-        // min-height: 20vw;
-        // padding: 15px;
-        // box-sizing: border-box;
         transition: opacity 0.5s, transform 0.5s;
         opacity: 0;
         transform: translateY(-60px);
@@ -146,6 +142,7 @@
 
 // ===============================================================
 // ===============================================================
+// SECTION HÉBERGEMENT
 // ===============================================================
 // ===============================================================
 
@@ -214,8 +211,10 @@
     }
 }
 
+
 // ===============================================================
 // ===============================================================
+// SECTION OPTIONS
 // ===============================================================
 // ===============================================================
 
@@ -293,7 +292,6 @@
 
 
 .leToggle {
-    // background-color: orange;
     width: 20%;
     height: 100%;
     display: flex;
@@ -302,8 +300,10 @@
     align-items: flex-end;
 }
 
+
 // ===============================================================
 // ===============================================================
+// SECTION FINALISATION
 // ===============================================================
 // ===============================================================
 #section_finalisation {
@@ -379,15 +379,10 @@
 
 // ===============================================================
 // ===============================================================
+// MEDIA QUERIES MOBILE FIRST
 // ===============================================================
 // ===============================================================
 
-@media screen and (min-width: $breakpoint_mini) {
-
-// #bodyPaiementRetour {
-//     top: 20vw;
-// }
-}
 
 @media screen and (min-width: $breakpoint_mobile) {
 
@@ -444,6 +439,5 @@
         grid-template-areas: "infos hebergement"
             "services  finalisation";
     }
-
 
 }
